[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planx-sdk"
version = "0.3.0"
authors = [
    { name = "Yusuf Eminoğlu", email = "yusufeminoglu@gmail.com" }
]
description = "Core spatial analytics, spatial statistics, and urban resilience engines for the PlanX ecosystem."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
planx = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = []

[tool.mypy]
files = ["src"]

[[tool.mypy.overrides]]
# scipy and scikit-learn do not ship type stubs; treat them as untyped.
module = ["scipy.*", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["planx"]
branch = true

[tool.coverage.report]
show_missing = true
# Safety net with headroom below the current ~45% branch coverage; raise as coverage improves.
fail_under = 40
